@@ -7,7 +7,7 @@ VML support.
 Building
 ========
 
-This version of `Numexpr` requires Python 2.5 or greater,
+This version of `Numexpr` requires Python 2.6 or greater,
 and NumPy 1.6 or greater.
 
 It's built in the standard Python way:
