@@ -251,8 +251,8 @@ get_return_sig(PyObject* program)
 {
     int sig;
     char last_opcode;
-    Py_ssize_t end = PyString_Size(program);
-    char *program_str = PyString_AS_STRING(program);
+    Py_ssize_t end = PyBytes_Size(program);
+    char *program_str = PyBytes_AS_STRING(program);
 
     do {
         end -= 4;
@@ -290,14 +290,14 @@ static int
 last_opcode(PyObject *program_object) {
     npy_intp n;
     unsigned char *program;
-    PyString_AsStringAndSize(program_object, (char **)&program, &n);
+    PyBytes_AsStringAndSize(program_object, (char **)&program, &n);
     return program[n-4];
 }
 
 static int
 get_reduction_axis(PyObject* program) {
-    Py_ssize_t end = PyString_Size(program);
-    int axis = ((unsigned char *)PyString_AS_STRING(program))[end-1];
+    Py_ssize_t end = PyBytes_Size(program);
+    int axis = ((unsigned char *)PyBytes_AS_STRING(program))[end-1];
     if (axis != 255 && axis >= MAX_DIMS)
         axis = MAX_DIMS - axis;
     return axis;
@@ -313,8 +313,8 @@ check_program(NumExprObject *self)
     int pc, arg, argloc, argno, sig;
     char *fullsig, *signature;
 
-    if (PyString_AsStringAndSize(self->program, (char **)&program,
-                                 &prog_len) < 0) {
+    if (PyBytes_AsStringAndSize(self->program, (char **)&program,
+                                &prog_len) < 0) {
         PyErr_Format(PyExc_RuntimeError, "invalid program: can't read program");
         return -1;
     }
@@ -322,13 +322,13 @@ check_program(NumExprObject *self)
         PyErr_Format(PyExc_RuntimeError, "invalid program: prog_len mod 4 != 0");
         return -1;
     }
-    if (PyString_AsStringAndSize(self->fullsig, (char **)&fullsig,
-                                 &n_buffers) < 0) {
+    if (PyBytes_AsStringAndSize(self->fullsig, (char **)&fullsig,
+                                &n_buffers) < 0) {
         PyErr_Format(PyExc_RuntimeError, "invalid program: can't read fullsig");
         return -1;
     }
-    if (PyString_AsStringAndSize(self->signature, (char **)&signature,
-                                 &n_inputs) < 0) {
+    if (PyBytes_AsStringAndSize(self->signature, (char **)&signature,
+                                &n_inputs) < 0) {
         PyErr_Format(PyExc_RuntimeError, "invalid program: can't read signature");
         return -1;
     }
@@ -690,8 +690,8 @@ run_interpreter(NumExprObject *self, NpyIter *iter, NpyIter *reduce_iter,
     char *errmsg = NULL;
 
     *pc_error = -1;
-    if (PyString_AsStringAndSize(self->program, (char **)&(params.program),
-                                 &plen) < 0) {
+    if (PyBytes_AsStringAndSize(self->program, (char **)&(params.program),
+                                &plen) < 0) {
         return -1;
     }
 
@@ -705,7 +705,7 @@ run_interpreter(NumExprObject *self, NpyIter *iter, NpyIter *reduce_iter,
     params.mem = self->mem;
     params.memsteps = self->memsteps;
     params.memsizes = self->memsizes;
-    params.r_end = (int)PyString_Size(self->fullsig);
+    params.r_end = (int)PyBytes_Size(self->fullsig);
     params.out_buffer = NULL;
 
     if ((gs.nthreads == 1) || gs.force_serial) {
@@ -808,8 +808,8 @@ run_interpreter_const(NumExprObject *self, char *output, int *pc_error)
     npy_intp *memsteps;
 
     *pc_error = -1;
-    if (PyString_AsStringAndSize(self->program, (char **)&(params.program),
-                                 &plen) < 0) {
+    if (PyBytes_AsStringAndSize(self->program, (char **)&(params.program),
+                                &plen) < 0) {
         return -1;
     }
     if (self->n_inputs != 0) {
@@ -825,7 +825,7 @@ run_interpreter_const(NumExprObject *self, char *output, int *pc_error)
     params.mem = self->mem;
     memsteps = self->memsteps;
     params.memsizes = self->memsizes;
-    params.r_end = (int)PyString_Size(self->fullsig);
+    params.r_end = (int)PyBytes_Size(self->fullsig);
 
     mem = params.mem;
     get_temps_space(params, mem, 1);
@@ -878,7 +878,7 @@ NumExpr_run(NumExprObject *self, PyObject *args, PyObject *kwds)
     is_reduction = last_opcode(self->program) > OP_REDUCTION;
 
     n_inputs = (int)PyTuple_Size(args);
-    if (PyString_Size(self->signature) != n_inputs) {
+    if (PyBytes_Size(self->signature) != n_inputs) {
         return PyErr_Format(PyExc_ValueError,
                             "number of inputs doesn't match program");
     }
@@ -926,7 +926,7 @@ NumExpr_run(NumExprObject *self, PyObject *args, PyObject *kwds)
     for (i = 0; i < n_inputs; i++) {
         PyObject *o = PyTuple_GET_ITEM(args, i); /* borrowed ref */
         PyObject *a;
-        char c = PyString_AS_STRING(self->signature)[i];
+        char c = PyBytes_AS_STRING(self->signature)[i];
         int typecode = typecode_from_char(c);
         /* Convert it if it's not an array */
         if (!PyArray_Check(o)) {
